# StoryTime

./: .gitignore  CMakeSettings.json  CmakeLists.txt  README.md
cmake/: storytCompilerWarnings.cmake
example/: main.cpp
include/: Messaging.h  NDB.h  core.h  pst_reader.h
include/storyt/: common.h
include/storyt/pdf/: compression.h  parsers.h  pdf_reader.h  tokens.h
include/storyt/pst/: LTP.h  Messaging.h  NDB.h  core.h  pst_reader.h  utils.h
src/: LTP.h  Messaging.h  NDB.h  core.h  main.cpp  reader.h  test.cpp  types.h  utils.h
test/: CMakeLists.txt  core_tests.cpp  ltp_tests.cpp  ndb_tests.cpp  test_main.cpp  types_tests.cpp  util_tests.cpp
tests/: CMakeLists.txt  test.cpp
